--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "cross-env": "^5.1",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-purgecss": "^5.0.0-rc.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -20,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.1",
+        "glob-all": "^3.1.0",
         "axios": "^0.19.2",
         "tailwindcss": "^1.2.0",
         "vue": "^2.6.11",
