--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.1",
+        "alertifyjs": "^1.13.1",
         "axios": "^0.19.2",
         "glob-all": "^3.1.0",
         "tailwindcss": "^1.2.0",
