--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "alertifyjs": "^1.13.1",
         "axios": "^0.19.2",
         "glob-all": "^3.1.0",
+        "laravel-vue-pagination": "^2.3.1",
         "tailwindcss": "^1.2.0",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
